--- a/index.html
+++ b/index.html
@@ -24,22 +24,14 @@
         <section class="tools">
             <h2>Our Financial Tools</h2>
             <div class="tool-grid">
-                <div class="tool-card" id="loan-calculator">
-                    <h3>Loan Calculator</h3>
-                    <p>Calculate loan payments and interest.</p>
-                </div>
-                <div class="tool-card" id="investment-calculator">
-                    <h3>Investment Calculator</h3>
-                    <p>Project your investment growth.</p>
-                </div>
-                <div class="tool-card" id="budget-planner">
-                    <h3>Budget Planner</h3>
-                    <p>Create and manage your budget.</p>
-                </div>
-                <div class="tool-card" id="currency-converter">
-                    <h3>Currency Converter</h3>
-                    <p>Convert currencies in real time.</p>
-                </div>
+                <a href="tools/loan.html" class="tool-card">Loan Calculator</a>
+                <a href="tools/investment.html" class="tool-card">Investment Calculator</a>
+                <a href="tools/budget.html" class="tool-card">Budget Planner</a>
+                <a href="tools/currency.html" class="tool-card">Currency Converter</a>
+                <a href="tools/compound.html" class="tool-card">Compound Interest Calculator</a>
+                <a href="tools/sip.html" class="tool-card">SIP (Mutual Fund) Calculator</a>
+                <a href="tools/fdrd.html" class="tool-card">FD vs. RD Calculator</a>
+                <a href="tools/retirement.html" class="tool-card">Retirement Planner</a>
             </div>
         </section>
         <section class="charts">
