--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="tools">
             <h2>Our Financial Tools</h2>
             <div class="tool-grid">
-                <a href="tools/loan.html" class="tool-card">Loan Calculator</a>
+                <a href="tools/loan.html" class="tool-card">EMI(Loan) Calculator</a>
                 <a href="tools/investment.html" class="tool-card">Investment Calculator</a>
                 <a href="tools/budget.html" class="tool-card">Budget Planner</a>
                 <a href="tools/currency.html" class="tool-card">Currency Converter</a>
