--- a/tools/loan.html
+++ b/tools/loan.html
@@ -25,6 +25,12 @@
                 <input type="number" id="interestRate">
                 <label for="loanTerm">Loan Term (years):</label>
                 <input type="number" id="loanTerm">
+                <select id="currency">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="GBP">GBP</option>
+        <option value="INR">INR</option>
+    </select>
                 <button id="calculateLoan">Calculate</button>
                 <div id="loanResult"></div>
             </div>
