--- a/tools/loan.html
+++ b/tools/loan.html
@@ -32,6 +32,7 @@
         <option value="INR">INR</option>
     </select>
                 <button id="calculateLoan">Calculate</button>
+                <button id="resetLoan">Reset</button>
                 <div id="loanResult"></div>
             </div>
         </section>
