--- a/tools/budget.html
+++ b/tools/budget.html
@@ -23,6 +23,13 @@
                 <input type="number" id="income">
                 <label for="expenses">Monthly Expenses:</label>
                 <input type="number" id="expenses">
+                <label for="currency">Currency:</label>
+                <select id="currency">
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="INR">INR</option>
+                    </select>
                 <button id="calculateBudget">Calculate</button>
                 <div id="budgetResult"></div>
             </div>
