--- a/tools/compound.html
+++ b/tools/compound.html
@@ -27,6 +27,13 @@
                 <input type="number" id="time">
                 <label for="frequency">Compounding Frequency (times per year):</label>
                 <input type="number" id="frequency">
+                <label for="currency">Currency:</label>
+                <select id="currency">
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="INR">INR</option>
+                    </select>
                 <button id="calculateCompound">Calculate</button>
                 <div id="compoundResult"></div>
             </div>
