--- a/tools/investment.html
+++ b/tools/investment.html
@@ -27,6 +27,13 @@
                 <input type="number" id="growthRate">
                 <label for="investmentYears">Investment Years:</label>
                 <input type="number" id="investmentYears">
+                <label for="currency">Currency:</label>
+                <select id="currency">
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="INR">INR</option>
+                    </select>
                 <button id="calculateInvestment">Calculate</button>
                 <div id="investmentResult"></div>
             </div>
