--- a/tools/loan.html
+++ b/tools/loan.html
@@ -25,12 +25,13 @@
                 <input type="number" id="interestRate">
                 <label for="loanTerm">Loan Term (years):</label>
                 <input type="number" id="loanTerm">
+                <label for="currency">Currency:</label>
                 <select id="currency">
-        <option value="USD">USD</option>
-        <option value="EUR">EUR</option>
-        <option value="GBP">GBP</option>
-        <option value="INR">INR</option>
-    </select>
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="INR">INR</option>
+                    </select>
                 <button id="calculateLoan">Calculate</button>
                 <button id="resetLoan">Reset</button>
                 <div id="loanResult"></div>
