--- a/tools/retirement.html
+++ b/tools/retirement.html
@@ -27,6 +27,13 @@
                 <input type="number" id="monthlyExpenses">
                 <label for="returnRate">Expected Annual Return Rate (%):</label>
                 <input type="number" id="returnRate">
+                <label for="currency">Currency:</label>
+                <select id="currency">
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="INR">INR</option>
+                    </select>
                 <button id="calculateRetirement">Calculate</button>
                 <div id="retirementResult"></div>
             </div>
