--- a/tools/sip.html
+++ b/tools/sip.html
@@ -25,6 +25,13 @@
                 <input type="number" id="rate">
                 <label for="time">Investment Period (years):</label>
                 <input type="number" id="time">
+                <label for="currency">Currency:</label>
+                <select id="currency">
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="GBP">GBP</option>
+                    <option value="INR">INR</option>
+                    </select>
                 <button id="calculateSIP">Calculate</button>
                 <div id="sipResult"></div>
             </div>
