--- a/tools/budget.html
+++ b/tools/budget.html
@@ -31,6 +31,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateBudget">Calculate</button>
+                <button id="resetLoan">Reset</button>
                 <div id="budgetResult"></div>
             </div>
         </section>
