--- a/tools/currency.html
+++ b/tools/currency.html
@@ -34,6 +34,7 @@
                 <label for="amount">Amount:</label>
                 <input type="number" id="amount">
                 <button id="convertCurrency">Convert</button>
+                <button id="resetLoan">Reset</button>
                 <div id="currencyResult"></div>
             </div>
         </section>
