--- a/tools/fdrd.html
+++ b/tools/fdrd.html
@@ -33,6 +33,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateFDRD">Calculate</button>
+                <button id="resetLoan">Reset</button>
                 <div id="fdrdResult"></div>
             </div>
         </section>
