--- a/tools/investment.html
+++ b/tools/investment.html
@@ -35,6 +35,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateInvestment">Calculate</button>
+                <button id="resetLoan">Reset</button>
                 <div id="investmentResult"></div>
             </div>
         </section>
