--- a/tools/loan.html
+++ b/tools/loan.html
@@ -34,6 +34,7 @@
                     </select>
                 <button id="calculateLoan">Calculate</button>
                 <button id="resetLoan">Reset</button>
+                <button id="resetLoan">Reset</button>
                 <div id="loanResult"></div>
             </div>
         </section>
