--- a/tools/retirement.html
+++ b/tools/retirement.html
@@ -35,6 +35,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateRetirement">Calculate</button>
+                <button id="resetLoan">Reset</button>
                 <div id="retirementResult"></div>
             </div>
         </section>
