--- a/tools/sip.html
+++ b/tools/sip.html
@@ -33,6 +33,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateSIP">Calculate</button>
+                <button id="resetLoan">Reset</button>
                 <div id="sipResult"></div>
             </div>
         </section>
