--- a/tools/loan.html
+++ b/tools/loan.html
@@ -19,12 +19,17 @@
         <section class="tool-content">
             <h2>Loan Calculator</h2>
             <div class="calculator">
-                <label for="loanAmount">Loan Amount:</label>
-                <input type="number" id="loanAmount">
+               <label for="loanAmount">Loan Amount:</label>
+                <input type="number" id="loanAmount" value="10000" min="1000" max="1000000" step="1000">
+                <input type="range" id="loanAmountSlider" min="1000" max="1000000" step="1000" value="10000">
+
                 <label for="interestRate">Interest Rate (%):</label>
-                <input type="number" id="interestRate">
+                <input type="number" id="interestRate" value="5" min="0" max="20" step="0.1">
+                <input type="range" id="interestRateSlider" min="0" max="20" step="0.1" value="5">
+
                 <label for="loanTerm">Loan Term (years):</label>
-                <input type="number" id="loanTerm">
+                <input type="number" id="loanTerm" value="5" min="1" max="30" step="1">
+                <input type="range" id="loanTermSlider" min="1" max="30" step="1" value="5">
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
