--- a/tools/compound.html
+++ b/tools/compound.html
@@ -20,13 +20,20 @@
             <h2>Compound Interest Calculator</h2>
             <div class="calculator">
                 <label for="principal">Principal Amount:</label>
-                <input type="number" id="principal">
+                <input type="number" id="principal" value="1000" min="0" max="1000000" step="100">
+                <input type="range" id="principalSlider" min="0" max="1000000" step="100" value="1000">
+
                 <label for="rate">Annual Interest Rate (%):</label>
-                <input type="number" id="rate">
+                <input type="number" id="rate" value="5" min="0" max="20" step="0.1">
+                <input type="range" id="rateSlider" min="0" max="20" step="0.1" value="5">
+
                 <label for="time">Time (years):</label>
-                <input type="number" id="time">
+                <input type="number" id="time" value="5" min="1" max="30" step="1">
+                <input type="range" id="timeSlider" min="1" max="30" step="1" value="5">
+
                 <label for="frequency">Compounding Frequency (times per year):</label>
-                <input type="number" id="frequency">
+                <input type="number" id="frequency" value="1" min="1" max="365" step="1">
+                <input type="range" id="frequencySlider" min="1" max="365" step="1" value="1">
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
