--- a/tools/investment.html
+++ b/tools/investment.html
@@ -20,13 +20,20 @@
             <h2>Investment Calculator</h2>
             <div class="calculator">
                 <label for="initialInvestment">Initial Investment:</label>
-                <input type="number" id="initialInvestment">
+                <input type="number" id="initialInvestment" value="1000" min="0" max="1000000" step="100">
+                <input type="range" id="initialInvestmentSlider" min="0" max="1000000" step="100" value="1000">
+
                 <label for="annualContribution">Annual Contribution:</label>
-                <input type="number" id="annualContribution">
+                <input type="number" id="annualContribution" value="1000" min="0" max="100000" step="100">
+                <input type="range" id="annualContributionSlider" min="0" max="100000" step="100" value="1000">
+
                 <label for="growthRate">Annual Growth Rate (%):</label>
-                <input type="number" id="growthRate">
+                <input type="number" id="growthRate" value="5" min="0" max="20" step="0.1">
+                <input type="range" id="growthRateSlider" min="0" max="20" step="0.1" value="5">
+
                 <label for="investmentYears">Investment Years:</label>
-                <input type="number" id="investmentYears">
+                <input type="number" id="investmentYears" value="5" min="1" max="30" step="1">
+                <input type="range" id="investmentYearsSlider" min="1" max="30" step="1" value="5">
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
