--- a/tools/retirement.html
+++ b/tools/retirement.html
@@ -19,14 +19,21 @@
         <section class="tool-content">
             <h2>Retirement Planner</h2>
             <div class="calculator">
-                <label for="currentAge">Current Age:</label>
-                <input type="number" id="currentAge">
+                             <label for="currentAge">Current Age:</label>
+                <input type="number" id="currentAge" value="30" min="18" max="70" step="1">
+                <input type="range" id="currentAgeSlider" min="18" max="70" step="1" value="30">
+
                 <label for="retirementAge">Retirement Age:</label>
-                <input type="number" id="retirementAge">
+                <input type="number" id="retirementAge" value="65" min="50" max="75" step="1">
+                <input type="range" id="retirementAgeSlider" min="50" max="75" step="1" value="65">
+
                 <label for="monthlyExpenses">Monthly Expenses in Retirement:</label>
-                <input type="number" id="monthlyExpenses">
+                <input type="number" id="monthlyExpenses" value="2000" min="0" max="100000" step="100">
+                <input type="range" id="monthlyExpensesSlider" min="0" max="100000" step="100" value="2000">
+
                 <label for="returnRate">Expected Annual Return Rate (%):</label>
-                <input type="number" id="returnRate">
+                <input type="number" id="returnRate" value="5" min="0" max="20" step="0.1">
+                <input type="range" id="returnRateSlider" min="0" max="20" step="0.1" value="5">
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
