--- a/tools/sip.html
+++ b/tools/sip.html
@@ -20,11 +20,17 @@
             <h2>SIP (Mutual Fund) Calculator</h2>
             <div class="calculator">
                 <label for="monthlyInvestment">Monthly Investment:</label>
-                <input type="number" id="monthlyInvestment">
+                <input type="number" id="monthlyInvestment" value="1000" min="0" max="100000" step="100">
+                <input type="range" id="monthlyInvestmentSlider" min="0" max="100000" step="100" value="1000">
+
                 <label for="rate">Annual Expected Return Rate (%):</label>
-                <input type="number" id="rate">
-                <label for="time">Investment Period (years):</label>
-                <input type="number" id="time">
+                <input type="number" id="rate" value="12" min="0" max="25" step="0.1">
+                <input type="range" id="rateSlider" min="0" max="25" step="0.1" value="12">
+
+                <label for="time">Investment Time (years):</label>
+                <input type="number" id="time" value="10" min="1" max="30" step="1">
+                <input type="range" id="timeSlider" min="1" max="30" step="1" value="10">
+
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
