--- a/tools/budget.html
+++ b/tools/budget.html
@@ -35,7 +35,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateBudget">Calculate</button>
-                <button id="resetLoan">Reset</button>
+                <button id="resetBudget">Reset</button>
                 <div id="budgetResult"></div>
             </div>
         </section>
