--- a/tools/compound.html
+++ b/tools/compound.html
@@ -42,7 +42,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateCompound">Calculate</button>
-                <button id="resetLoan">Reset</button>
+                <button id="resetCompound">Reset</button>
                 <div id="compoundResult"></div>
             </div>
         </section>
