--- a/tools/fdrd.html
+++ b/tools/fdrd.html
@@ -38,7 +38,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateFDRD">Calculate</button>
-                <button id="resetLoan">Reset</button>
+                <button id="resetFDRD">Reset</button>
                 <div id="fdrdResult"></div>
             </div>
         </section>
