--- a/tools/sip.html
+++ b/tools/sip.html
@@ -39,7 +39,7 @@
                     <option value="INR">INR</option>
                     </select>
                 <button id="calculateSIP">Calculate</button>
-                <button id="resetLoan">Reset</button>
+                <button id="resetSIP">Reset</button>
                 <div id="sipResult"></div>
             </div>
         </section>
