--- a/tools/loan.html
+++ b/tools/loan.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class="tool-content">
-            <h2>Loan Calculator</h2>
+            <h2>EMI (Loan) Calculator</h2>
             <div class="calculator">
                <label for="loanAmount">Loan Amount:</label>
                 <input type="number" id="loanAmount" value="10000" min="1000" max="1000000" step="1000">
