--- a/tools/budget.html
+++ b/tools/budget.html
@@ -38,6 +38,7 @@
                 <button id="calculateBudget">Calculate</button>
                 <button id="resetBudget">Reset</button>
                 <div id="budgetResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
