--- a/tools/compound.html
+++ b/tools/compound.html
@@ -45,6 +45,7 @@
                 <button id="calculateCompound">Calculate</button>
                 <button id="resetCompound">Reset</button>
                 <div id="compoundResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
