--- a/tools/fdrd.html
+++ b/tools/fdrd.html
@@ -41,6 +41,7 @@
                 <button id="calculateFDRD">Calculate</button>
                 <button id="resetFDRD">Reset</button>
                 <div id="fdrdResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
