--- a/tools/investment.html
+++ b/tools/investment.html
@@ -45,6 +45,7 @@
                 <button id="calculateInvestment">Calculate</button>
                 <button id="resetInvestment">Reset</button>
                 <div id="investmentResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
