--- a/tools/loan.html
+++ b/tools/loan.html
@@ -41,6 +41,7 @@
                 <button id="calculateLoan">Calculate</button>
                 <button id="resetLoan">Reset</button>
         <div id="loanResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
