--- a/tools/retirement.html
+++ b/tools/retirement.html
@@ -45,6 +45,7 @@
                 <button id="calculateRetirement">Calculate</button>
                 <button id="resetRetirement">Reset</button>
                 <div id="retirementResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
