--- a/tools/sip.html
+++ b/tools/sip.html
@@ -42,6 +42,7 @@
                 <button id="calculateSIP">Calculate</button>
                 <button id="resetSIP">Reset</button>
                 <div id="sipResult"></div>
+                <canvas id="myChart"></canvas>
             </div>
         </section>
     </main>
