--- a/tools/budget.html
+++ b/tools/budget.html
@@ -39,6 +39,26 @@
                 <button id="resetBudget">Reset</button>
                 <div id="budgetResult"></div>
                 <canvas id="myChart"></canvas>
+                <div class="tool-explanation">
+    <h3>Master Your Finances with the Budget Planner</h3>
+    <p>
+        The Budget Planner is an essential tool designed to empower you with a clear understanding of your financial landscape. It simplifies the often daunting task of managing your income and expenses, providing a visual representation of your financial health. By inputting your monthly income and expenses, you can immediately see your remaining savings, identify spending patterns, and make informed decisions about your money.
+    </p>
+    <p>
+        The core of the Budget Planner lies in its simplicity. It calculates the difference between your total income and total expenses, presenting the result as your monthly savings. The fundamental formula used is:
+        <strong>Savings = Income - Expenses</strong>.
+        This straightforward calculation forms the basis for effective budgeting.
+    </p>
+    <p>
+        The uses of this tool are manifold. It's perfect for individuals seeking to gain control over their finances, families planning their monthly expenditures, and even small businesses aiming to track their cash flow. By providing a clear snapshot of your financial situation, the Budget Planner enables you to set realistic financial goals, identify areas where you can cut back on spending, and allocate resources more efficiently.
+    </p>
+    <p>
+        The benefits of using the Budget Planner extend beyond mere calculations. It fosters a sense of financial awareness, allowing you to understand where your money is going and how you can make it work harder for you. Regular use of the tool can lead to significant savings, improved financial stability, and reduced stress related to money management. It also helps you prepare for unforeseen expenses and achieve long-term financial goals, such as buying a home, saving for retirement, or funding your children's education.
+    </p>
+    <p>
+        To use the Budget Planner effectively, start by accurately inputting your monthly income from all sources. Then, meticulously list your expenses, categorizing them as necessary (e.g., rent, utilities, groceries, entertainment). The tool will then calculate your savings and present the data in an easy-to-understand chart. Regularly update your entries to maintain an accurate picture of your finances. Analyze the chart to identify areas where you can reduce spending or increase savings. Use the tool to set monthly savings goals and track your progress. With consistent use, the Budget Planner can become an indispensable part of your financial toolkit, helping you achieve financial freedom and peace of mind.
+    </p>
+</div>
             </div>
         </section>
     </main>
