--- a/tools/fdrd.html
+++ b/tools/fdrd.html
@@ -42,6 +42,37 @@
                 <button id="resetFDRD">Reset</button>
                 <div id="fdrdResult"></div>
                 <canvas id="myChart"></canvas>
+                <div class="tool-explanation">
+    <h3>Maximize Your Savings with the FD/RD Calculator</h3>
+    <p>
+        The FD/RD Calculator is designed to help you understand the returns on Fixed Deposits (FDs) and Recurring Deposits (RDs), two popular investment options known for their stability and predictable returns. This tool allows you to calculate the maturity amount and total interest earned based on your principal investment, interest rate, and investment period.
+    </p>
+    <p>
+        For Fixed Deposits (FDs), the formula used is:
+        <strong>A = P (1 + r)^t</strong>
+        Where:
+        A = Maturity Amount
+        P = Principal Amount
+        r = Annual Interest Rate (decimal)
+        t = Time (years)
+        For Recurring Deposits (RDs), the formula is:
+        <strong>M = R * [(1 + i)^n - 1] * (1 + i) / i</strong>
+        Where:
+        M = Maturity Value
+        R = Monthly Installment
+        i = Monthly Interest Rate (annual rate / 12 / 100)
+        n = Number of Months
+    </p>
+    <p>
+        This tool is beneficial for individuals looking for safe and reliable investment options. FDs are ideal for lump-sum investments, offering a fixed interest rate over a specified period. RDs, on the other hand, allow you to invest a fixed amount regularly, making them suitable for disciplined savings. Whether you're planning for a specific financial goal or simply looking to grow your savings, this calculator can help you make informed decisions.
+    </p>
+    <p>
+        The benefits of using the FD/RD Calculator include a clear understanding of potential returns, enabling you to compare different investment options and choose the one that best suits your financial goals. It also helps you appreciate the importance of disciplined savings and long-term financial planning.
+    </p>
+    <p>
+        To use the FD/RD Calculator effectively, start by selecting the type of deposit (FD or RD). Then, input the principal amount, annual interest rate, and investment period. The calculator will then display the maturity amount and total interest earned. Analyze the results to understand how different factors affect your returns. Experiment with various scenarios to find the optimal investment strategy for your financial goals. With consistent use, the FD/RD Calculator can become a valuable tool in your financial planning.
+    </p>
+</div>
             </div>
         </section>
     </main>
