--- a/tools/investment.html
+++ b/tools/investment.html
@@ -46,6 +46,31 @@
                 <button id="resetInvestment">Reset</button>
                 <div id="investmentResult"></div>
                 <canvas id="myChart"></canvas>
+                <div class="tool-explanation">
+    <h3>Plan Your Financial Future with the Investment Calculator</h3>
+    <p>
+        The Investment Calculator is a powerful tool designed to help you project the future value of your investments. Whether you're planning for retirement, your children's education, or simply growing your wealth, this calculator allows you to estimate your investment's growth based on your initial investment, annual contributions, expected rate of return, and investment period.
+    </p>
+    <p>
+        The Investment Calculator uses a compound interest formula, similar to the one used for compound interest calculations:
+        <strong>FV = PV (1 + r)^n + PMT * [((1 + r)^n - 1) / r]</strong>
+        Where:
+        FV = Future Value of the investment
+        PV = Present Value (initial investment)
+        r = Annual rate of return (decimal)
+        n = Number of years
+        PMT = Annual Contribution
+    </p>
+    <p>
+        This tool is invaluable for anyone looking to understand the potential growth of their investments. It allows you to explore different investment scenarios and see how factors like annual returns and investment periods can impact your future wealth. By understanding these dynamics, you can make informed decisions about your investment strategy and set realistic financial goals.
+    </p>
+    <p>
+        The benefits of using the Investment Calculator are numerous. It helps you visualize the potential growth of your investments, empowering you to make strategic decisions about your portfolio. It also helps you appreciate the importance of starting early and investing consistently, as time is a crucial factor in investment growth.
+    </p>
+    <p>
+        To use the Investment Calculator effectively, begin by entering your initial investment amount. Then, input your annual contribution, expected annual rate of return (as a percentage), and investment period in years. The calculator will then display the future value of your investment and the total earnings. Analyze the results to understand how different factors affect your returns. Experiment with various scenarios to find the optimal investment strategy for your financial goals. With consistent use, the Investment Calculator can become an indispensable tool in your financial planning toolkit.
+    </p>
+</div>
             </div>
         </section>
     </main>
